--- a/.github/workflows/workflow_demo1.yml
+++ b/.github/workflows/workflow_demo1.yml
@@ -1,18 +1,36 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [push]
+name: Nest.js CD Pipeline
+
+on:
+  push:
+    branches:
+      - main  # 监听的分支，可以根据需要更改
+
 jobs:
-  Explore-GitHub-Actions:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v4
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20.x'  # Node.js 版本，须根据项目需要调整
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Build the project
+      run: npm run build
+
+    - name: Deploy to server
+      env:
+        HOST: ${{ secrets.DEPLOY_HOST }}
+        USERNAME: ${{ secrets.DEPLOY_USER }}
+        PRIVATE_KEY: ${{ secrets.DEPLOY_KEY }}
+        TARGET_DIR: ${{ secrets.DEPLOY_DIR }}
+      run: |
+        ssh -o StrictHostKeyChecking=no -i "$PRIVATE_KEY" "$USERNAME@$HOST" "mkdir -p $TARGET_DIR"
+        scp -i "$PRIVATE_KEY" -r dist/* "$USERNAME@$HOST:$TARGET_DIR"
+    # 根据需要补充其他部署步骤
