--- a/.github/workflows/workflow_demo1.yml
+++ b/.github/workflows/workflow_demo1.yml
@@ -32,5 +32,5 @@ jobs:
         TARGET_DIR: ${{ secrets.DEPLOY_DIR }}
       run: |
         ssh -o StrictHostKeyChecking=no -i "$PRIVATE_KEY" "$USERNAME@$HOST" "mkdir -p $TARGET_DIR"
-        scp -i "$PRIVATE_KEY" -r dist/* "$USERNAME@$HOST:$TARGET_DIR"
+        # scp -i "$PRIVATE_KEY" -r dist/* "$USERNAME@$HOST:$TARGET_DIR"
     # 根据需要补充其他部署步骤
